--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
   <div class="about_container">
     <div class="heading">
       <h2> MY STORY </h2>
-      <h1> PRODUCT AFICIONADO <span style="color:#C2C2C2">&</span> SERVICE DESIGN ENTHUSIAST</h1>
+      <h1> OPERATIONS CONNOISSEUR <span style="color:#C2C2C2">&</span> SERVICE DESIGN ENTHUSIAST</h1>
       <a href="index.html"><button class="btn">SEE MY WORK</button></a>
       <a href="mailto:ekkalux_414@berkeley.edu"><button class="btn">GET IN TOUCH</button></a>
     </div>
