--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, intial-scale=1">
-  <title>Ekkalux Nguyen</title>
+  <title>Ekkalux Nguyen | UX Designer</title>
   <link rel="stylesheet" href="css/homepage.css">
   <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/animate.css">
@@ -12,6 +12,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="js/scrolldown.js"></script>
+
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108806471-1"></script>
@@ -61,7 +63,7 @@
 <section class="projects">
   <div class="container2 image_holder">
         <a href="equipax.html">
-          <img src="images/equipax.png">
+          <img src="images/equipaxbig.png">
         <div class="overlay centered full-width-height" style="background: #3F0609;">
           <div class="centered" style="text-align: center">
               <p style="color: white"> EQUIPAX<br />
@@ -74,7 +76,7 @@
 
   <div class="container2 image_holder">
         <a href="gymseeker.html">
-          <img src="images/gym.png">
+          <img src="images/gymseekerbig.png">
         <div class="overlay centered full-width-height" style="background: #133A55;">
           <div class="centered" style="text-align: center">
               <p style="color: white"> GYMSEEKER <br/>
@@ -87,7 +89,7 @@
 
   <div class="container2 image_holder">
         <a href="ridestarter2.html">
-          <img src="images/ridestarter.png">
+          <img src="images/ridestarterbig.png">
         <div class="overlay centered full-width-height" style="background: #0F750F;">
           <div class="centered" style="text-align: center">
               <p style="color: white"> RIDESTARTER<br/>
@@ -100,7 +102,7 @@
 
   <div class="container2 image_holder">
         <a href="simplebox.html">
-          <img src="images/simplebox.png">
+          <img src="images/simpleboxbig.png">
         <div class="overlay centered full-width-height" style="background: #30485F;">
           <div class="centered" style="text-align: center">
               <p style="color: white"> SIMPLEBOX <br />
