--- a/ridestarter2.html
+++ b/ridestarter2.html
@@ -140,13 +140,13 @@
       looking for the best deals and power-shopper - one who are driven by a specific need and know exactly what they want.
       With the personas, I was able to bring more empathy to the early phases and eventually throughout the project.  </p>
       <div class="row">
-        <div class="column">
+        <div class="column3">
           <a href="images/ridestarter/luke.png"><img src="images/ridestarter/luke.png"></a>
         </div>
-        <div class="column">
+        <div class="column3">
           <a href="images/ridestarter/peter.png"><img src="images/ridestarter/peter.png"></a>
         </div>
-        <div class="column">
+        <div class="column3">
           <a href="images/ridestarter/hunter.png"><img src="images/ridestarter/hunter.png"></a>
         </div>
       </div>
@@ -183,7 +183,7 @@
        wireframes from the fundraiser's perspective where they are able to manage and edit their projects. </p>
       <div class="middle">
         <h3> Low/Medium Fidelity Wireframes </h3>
-        <a href="images/ridestarter/ridestarter_low.png"><img src="images/ridestarter/ridestarter_low.png"></a>
+        <a href="images/ridestarter/low.jpg"><img src="images/ridestarter/low.jpg"></a>
       </div>
     </div>
   </section>
