--- a/ridestarter.html
+++ b/ridestarter.html
@@ -11,6 +11,8 @@
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="js/ridestarter.js"></script>
 
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108806471-1"></script>
 <script>
