--- a/equipax.html
+++ b/equipax.html
@@ -13,6 +13,8 @@
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="js/equipax.js"></script>
 
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet">
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108806471-1"></script>
 <script>
@@ -68,7 +70,8 @@
 
   <section class="problem">
       <div class="container">
-        <h1> A Problem to Solve</h1>
+        <h2> Problem Statement </h2>
+        <h1> Shopping online isn't the same as in Store  </h1>
         <p>Surely there are ecommerce sites that offer outdoor gears for the thrill-seekers.
           Even with these shopping sites, their items focus on a general selection of apparels
           and gears - with backpacks specifically hidden in their many choices. Coupling with some of
@@ -78,7 +81,8 @@
 
   <section class="solution">
     <div class="container">
-      <h1> Seeking the Solutions </h1>
+      <h2> Solution Overview </h2>
+      <h1> Replicating similar Shopping experiences  </h1>
       <p> Equipax aims to provide users with a seamless shopping experience when they are making
       their backpack purchases. Users are provided with an all traditional element of an eccomerce
       site with a curtail focus on outdoor backpacks. Users can easily compare items and contact
@@ -96,7 +100,7 @@
 <section class="research">
   <div class="container">
     <h2> Discovery & Strategy Phase </h2>
-    <h1> Getting to know my Users </h1>
+    <h1> Getting Personal with my Users</h1>
     <p> To kick off my research, I surveyed many different types of users. From outdoor
     enthusiasts to general shoppers, I wanted to find out about the following users habits and perspectives
   in the following areas: </p>
@@ -138,7 +142,7 @@
 
 <section class="personas">
   <div class="container">
-    <h1> Crafting my Audiences</h1>
+    <h1> Who is up for an adventure? </h1>
     <p> Following the user survey and interviews, I used the feedback as the jumping
     off point to create user personas. I was able to
     craft and hone two relevant personas: bargain hunter - one who spends an exorbitant amount of time
@@ -158,10 +162,10 @@
 
 <section class="competitive">
   <div class="container">
-    <h1> Who are my Competitors? </h1>
-    <p> To gain a better understanding of Equipax's competitor, I surveyed the top
-    competitors in the online market for outdoor gears: REI and Cotopaxi. This is a summary
-    of my SWOT analysis:</p>
+    <h1> Be Inspired of Who Am I Up Against </h1>
+    <p> To gain a better understanding of the outdoor market, I wanted to familiarize myself with
+      Equipax's competitors to gain a better understanding of the similar problems that Equipax
+      attempts to solve. Below is a quick summary of the competitor audit. </p>
     <a href="images/equipax/competitive.png"><img src="images/equipax/competitive.png"></a>
 
     <div class="middle">
@@ -178,7 +182,7 @@
 <section class="Information">
   <div class="container">
     <h2> Information Architecture Phase</h2>
-    <h1> Ensuring a Streamlined Ecommerce Flow </h1>
+    <h1> Maintaining a Minimum Viable Product </h1>
     <p> Using Google Sheets and Draw.io, I created both user stories and user flows based on
       my research to develop a minimum viable product. For both new and returning users,
       being able to find a specific backpack and knowing where to complete a purchase are the
@@ -189,7 +193,7 @@
 
 <section class="low-fidelity">
   <div class="container">
-    <h1> Constructing the Early Screens</h1>
+    <h1> Crafting the Origin Wireframes</h1>
     <p> Keeping the research in mind, I used Sketch to produce medium-fidelity
     wireframes. After completing the wireframes, I presented the mockups to three potential users.
     I wanted to focus on making sure that the screen flow caters to my personas' needs.
@@ -217,7 +221,7 @@
 <section class="brand">
   <div class="container">
     <h2> Visual Identity Phase </h2>
-    <h1> Evoking Emotions through Branding </h1>
+    <h1> Evoking Outdoorsman through Branding </h1>
     <p> To begin the branding process, I needed a name for the product. Going through
     several iterations of mind-mapping, I eventually landed on Equipax. "Equip" and "backpack"
     were synthesized to form Equipax, simply meaning to put on a backpack. To further the logo,
@@ -270,6 +274,14 @@
     agent, I conducted a click test and was able to gather 21 responses. Based on
       the test, users had no trouble finding the live chat button. </p>
     <a href="images/equipax/clicktest.png"><img src="images/equipax/clicktest.png"></a>
+    <h1> Additional User Testing </h1>
+    <p> 1. Testers were met with positive interaction with Equipax. Users can clearly
+    identify the navigation flow from the start of finding a backpack to completing
+    a successful purchase. </p>
+    <p> 2. Consistency is also very important when going through the purchasing screens of an item
+    where a lot of information are presented. A second promo code registration option was added
+    to the Shipping/Payment page when users hinted that they couldn't add a promo code unless having to
+    go back to the cart page.</p>
 
   </div>
 </section>
