--- a/gymseeker.html
+++ b/gymseeker.html
@@ -13,6 +13,8 @@
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="js/equipax.js"></script>
 
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet">
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108806471-1"></script>
 <script>
@@ -67,7 +69,8 @@
 
   <section class="problem">
       <div class="container">
-        <h1> A Problem to Solve</h1>
+        <h2> Problem Statement</h2>
+        <h1> There are too many gyms to choose from </h1>
         <p>Finding the right gym is different for everyone. Whether that is location, price or types of
         services offered, users must go through a rigorous research process before making a
         commitment. Applications such as Yelp does aid in the process of locating a gym, but it isn't
@@ -78,7 +81,8 @@
 
   <section class="solution">
     <div class="container">
-      <h1> Seeking the Solutions </h1>
+      <h2> Solution Overview</h2>
+      <h1> Achieving Fitness Goals at the Right Gym</h1>
       <p> Gymseeker makes the process of finding a gym easier by streamlining the research
       and selection phase based on the users' needs. Users can search for gyms basd on location and
     view gym's profile before making a commitment to purchasing a membership, easing users in the decision-making process. </p>
@@ -93,8 +97,9 @@
       <h2> Discovery & Strategy Phase </h2>
       <h1> Getting to know my Users </h1>
       <p> I initiated my research by crafting a 15 questions user survey in order to
-      find out users' goals and pain points. Through this survey, I needed to learn the
-    following: </p>
+      find out users' goals and pain points. By targeting audiences from all experiences with
+      gym-related components, I gathered more than 40 comprehensive responses. From this survey, I needed to learn the
+      following: </p>
       <ul class="list">
           <li> User's fitness goals </li>
           <li> What factor is important in selecting a gym </li>
@@ -105,8 +110,8 @@
       <img src="images/gymseeker/research.png">
       <div class="middle">
         <h3> Interviewing my Users </h3>
-        <p> Following the user survery, I held interviews with four different users to
-        gain a better sense of  </p>
+        <p> Following the user survery, I held interviews with four different users to gather qualitative
+          insights on their gym behavior. </p>
       </div>
         <blockquote> Sometimes I have too much work to do so I get lazy to hit the gym </blockquote>
         <blockquote> My gym is ugly. So even though the exercise gives me a mental break, I wish
@@ -119,7 +124,10 @@
           presented (e.g community, overcrowding, lack of certain equipments), it is important that Gymseeker eases users
           in simplifying decision-making when choosing a gym. </p>
           <p> 2. People wants to meet their fitness goals, but find it hard to do so when they are met
-          with pain points like being too tired from work or the gym is too far to make the trip.</p>
+          with pain points like being too tired from work or the gym is too far to make the trip. They would
+          make more of the effort if their external inhibitors aren't deterring them. </p>
+          <p> 3. I learned that users tend to associate gyms with the weight room. Based
+          off this insight, I want to ensure that a gym profile on screen contain weight-related elements. </p>
 
         </div>
     </div>
@@ -150,7 +158,7 @@
   <section class="Information">
     <div class="container">
       <h2> Information Architecture Phase</h2>
-      <h1> Ensuring a Streamlined Ecommerce Flow </h1>
+      <h1> Centralizing the Volume of Information </h1>
       <p> After getting a better insight of the users, I could move on to creating
       the information architecture of Gymseeker. To plan out the structure of Gymseeker, I
       created a sitemap to use as a reference point for the creation of wireframes and
@@ -169,8 +177,9 @@
     <div class="container">
       <h1> Constructing the Early Screens</h1>
       <p> With the completed user stories and user flows, I created low-fidelity wireframes with
-      Balsamiq and then transferred it to clickable prototypes using Invision for user testing. I tested
-      the early screens with </p>
+      Balsamiq and then transferred it to clickable prototypes using Invision for user testing. I made
+      sure to test the intial screens with my peers and target users and convening all the insights
+      into the next iteration of designs. </p>
       <div class="middle">
         <h3> Low/Medium Fidelity Wireframes </h3>
         <a href="images/gymseeker/low.png"><img src="images/gymseeker/low.png"></a>
@@ -179,7 +188,7 @@
       <div class="middle">
         <h3> Early Testing and Iterations </h3>
         <p> 1. Users responded well to Gymseeker, saying that the app flow is intuitive and
-        straight to the point. </p>
+        straight to the point. A few minor tweaks include  </p>
         <p>2. One of the testers wanted to view the weekly schedule, but the early screens
         show only the hours on the day of. Consequentially, I created a new call to action to
         view the schedule of the gym hours. </p>
@@ -187,10 +196,10 @@
     </div>
   </section>
 
-  <section class="brand">
+  <section class="shadowbrand">
     <div class="container">
       <h2> Visual Identity Phase </h2>
-      <h1> Creating the Brand Identity </h1>
+      <h1> Understanding Gymseeker's Value, Then Build the Brand  </h1>
       <p> To build the product's brand, I was able to conclude an. Gymseeker needed
         a style that would evoke the feeling of energy and motivation. Yellow and orange
         came first to mind, but I decided on the color blue to represent the feeling
@@ -202,14 +211,13 @@
   <section class="hi-fi">
     <div class="container">
       <h2> Prototyping Phase </h2>
-      <h1> Showing the Real Elements </h1>
+      <h1> Be Inspired to Achieve Fitness Goals</h1>
       <p> After going through several iterations of the low-fidelity wireframes,
-      I begin to develop the high-fidelity wireframes. Using the style guide as a reference,
-      I was able to communicate the visual identity through the mobile screens.   </p>
+      I began to built out the high-fidelity wireframes. Using the style guide as a reference,
+      By making sure to maintain Gymseeker's core value of encouraging users to achieve their fitness goals,
+      I was able to clearly communicate the visual identity through the mobile screens.   </p>
       <div class="middle">
-
         <a href="images/gymseeker/visual.png"><img src="images/gymseeker/visual.png"></a>
-
       </div>
 
     </div>
@@ -218,13 +226,19 @@
   <section class="usability">
     <div class="container">
       <h2> Usability Phase </h2>
-      <h1> Initial User Testing </h1>
-      <p>   </p>
-      <div class="middle">
-        <h3> Insights From Testing </h3>
-      </div>
+      <h1> Iterating the Button Sizes </h1>
+      <p> When users were tasked with finding a gym, I noticed that users tend to stay in the map view and
+      didn't notice the list view unless otherwise hinted. In addition, designing mobile applications require
+      for buttons to be bigger due to users' thumb size. By making the accessibility for both views larger,
+      users can easily see and navigate from one view to the other.</p>
 
-      <h1> Navigation Iteration </h1>
+      <a href="images/gymseeker/map.png"><img src="images/gymseeker/map.png"></a>
+      <h1> Designing the List View </h1>
+      <p> When presented with the list view, users mentioned that they had trouble reading some of the contents.
+      To accomodate this pain point, I increased readability by increasing the fonts universally and applying
+      a darker visual element to the list view. Showing this screen again, users were impressed with
+      the visual hierarchy of the screen. </p>
+      <a href="images/gymseeker/list.png"><img src="images/gymseeker/list.png"></a>
 
     </div>
   </section>
