--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </div>
 
   <div class="container2 image_holder">
-        <a href="simplebox.html">
+        <a href="simplebox2.html">
           <img src="images/simpleboxbig.png">
         <div class="overlay centered full-width-height" style="background: #30485F;">
           <div class="centered" style="text-align: center">
