--- a/ridestarter2.html
+++ b/ridestarter2.html
@@ -13,6 +13,8 @@
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="js/equipax.js"></script>
 
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet">
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108806471-1"></script>
 <script>
@@ -67,19 +69,23 @@
 
   <section class="problem">
       <div class="container">
-        <h1> A Problem to Solve</h1>
-        <p>There are a lot of existing crowd-sourced fundraising web applications such as Kickstarter,
-          GoFundme, and Indiegogo. However, many of these applications cater towards personal or general projects. When pertaining to
-          charity bike rides, a well-designed solution hasn't been created.</p>
+        <h2> Problem Statement </h2>
+        <h1> </h1>
+        <p> The net market exists several popular crowdfunding services such as GoFundme, Kickstarter, and Indiegogo.
+          However, many of these web services either cater to holistic campaigns or specific ones such as creative projects.
+          When fundraising for charity bike rides, users would need to host their campaign through either the organization
+          they're funding for or through a general crowd-sourced site. </p>
       </div>
   </section>
 
   <section class="solution">
     <div class="container">
-      <h1> Seeking the Solutions </h1>
+      <h2> Solution Overview</h2>
+      <h1> Trust and Transparency </h1>
       <p> Ridestarter seeks to centralize charity bike rides across the world and allow users to crowd-sourced
-        for ride projects. In addition to attracting the cyclist community, Ridestarter allows donors and fundraisers to come
-        together in supporting charity rides for causes they care about.  </p>
+        for ride projects in one location. The goal for Ridestarter is to allow donors and fundraisers to come
+        together in supporting charity rides for causes they care about. Donors can browse and donate to a specific
+        cause of their choosing while fundraisers can effortlessly create bike campaigns through an intuitive flow.   </p>
 
         <div class="middle">
           <h3> See Interactive Prototype</h3>
@@ -103,7 +109,7 @@
           <li> Reasons for why users donate </li>
           <li> Reasons for why users don't donate </li>
           <li> User donation habits </li>
-          <li> Frustrations when fundraising </li>
+          <li> Frustrations when managing a fundraiser </li>
       </ul>
 
       <img src="images/ridestarter/research.png">
@@ -112,7 +118,7 @@
         <h3> Interviewing my Users </h3>
         <p> In addition to sending out the survey, I held user interviews with both users who have
         donated and fundraised. It was also important to target users who has been on charity bike rides to gain
-        a deeper understanding of the problem when creating a bike campaign.</p>
+        a deeper understanding of the pain points when creating a bike campaign.</p>
       </div>
         <blockquote> I rather donate to people or organizations that I can connect personally with  </blockquote>
         <blockquote> It would be cool to get potential riders to participate in the charity</blockquote>
@@ -124,8 +130,8 @@
           <p> 1. Often time, users are hesistant to donate online due to not knowing where their
           money is going to. I sought to answer how might we create trust and transparency to debunk
           hesitation and build a rapport with the users.</p>
-          <p> 2.  </p>
-          <p> 3. test  </p>
+          <p> 2. From a fundraiser's perspective, the biggest pain point was marketing and how to
+          incentivize users outside from the riders' mutual circle to donate to a campaign. </p>
         </div>
 
     </div>
@@ -157,17 +163,18 @@
     <div class="container">
       <h2> Information Architecture Phase</h2>
       <h1> Ensuring a Streamlined Ecommerce Flow </h1>
-      <p> Before touching on the wireframes, I wanted to ensure the clarity of Ridestarter's goals and structures,
-        I created a detailed sitemap to guide me through the later design process. </p>
+      <p> Before touching on the wireframes, I wanted to ensure the clarity of Ridestarter's goals and structures.
+        To do that, I created a detailed sitemap from the start of the landing page to the different
+        elements of a crowdfunding site. </p>
 
       <div class="middle">
-        <h3> Sitemap </h3>
         <a href="images/ridestarter/sitemap.png"><img src="images/ridestarter/sitemap.png"></a>
       </div>
 
       <div class="middle">
         <h3> User Flow </h3>
-        <p> </p>
+        <p> Using the user stories as a guide to to deliver an effectve user flow, I focused on the
+        development of both donors and fundraisers alike.  </p>
         <a href="images/ridestarter/user_flow.png"><img src="images/ridestarter/user_flow.png"></a>
       </div>
 
@@ -194,8 +201,8 @@
       <h1> Cycling through the Brand Identity </h1>
       <p> With Ridestarter being a crowdfunding application, eliciting trust and emotion are the
         most important facet in getting users to use the site. The color palette was comprised mainly of the color green. Green was used as the primary color for
-        Ridestarter because not only green associates with money flow, but also promotes
-        a love for nature and foliages, which are all presented during a rider's journey.</p>
+        Ridestarter because not only green conveys with money and funds, but also promotes
+        an association for nature and foliages, which are all presented during a rider's journey.</p>
       <a href="images/ridestarter/ridestarter_branding.png"><img src="images/ridestarter/ridestarter_branding.png"></a>
     </div>
   </section>
