--- a/equipax.html
+++ b/equipax.html
@@ -162,7 +162,7 @@
 
 <section class="competitive">
   <div class="container">
-    <h1> Be Inspired of Who Am I Up Against </h1>
+    <h1> Be Inspired of Who I am Up Against </h1>
     <p> To gain a better understanding of the outdoor market, I wanted to familiarize myself with
       Equipax's competitors to gain a better understanding of the similar problems that Equipax
       attempts to solve. Below is a quick summary of the competitor audit. </p>
