--- a/gymseeker.html
+++ b/gymseeker.html
@@ -196,7 +196,7 @@
     </div>
   </section>
 
-  <section class="shadowbrand">
+  <section class="shadowbrand brand">
     <div class="container">
       <h2> Visual Identity Phase </h2>
       <h1> Understanding Gymseeker's Value, Then Build the Brand  </h1>
