--- a/ridestarter2.html
+++ b/ridestarter2.html
@@ -62,7 +62,7 @@
         <h4> WEB APPLICATION | BLOC PROJECT | CASE STUDY </h4>
         <p> Ridestarter is a crowdfunding website application for organizations and individuals looking to
           either raise funds or donate to charity bike rides across the world. Users can choose to create a bike
-          campaign, supporting specific causes or browse through the different bike charities that are offered.  </p>
+          campaign, supporting specific causes of their choosing or browse and donate through the different active bike campaigns</p>
       </div>
     </div>
   </section>
@@ -70,22 +70,23 @@
   <section class="problem">
       <div class="container">
         <h2> Problem Statement </h2>
-        <h1> </h1>
+        <h1> A search for Charity bike challenges </h1>
         <p> The net market exists several popular crowdfunding services such as GoFundme, Kickstarter, and Indiegogo.
           However, many of these web services either cater to holistic campaigns or specific ones such as creative projects.
-          When fundraising for charity bike rides, users would need to host their campaign through either the organization
-          they're funding for or through a general crowd-sourced site. </p>
+          When users want to create a charity bike ride campaign, they would need to host their campaign through either the organization
+          they're funding for or a general crowd-sourced site. Unfortunately, there isn't a centralized crowd sourced site for
+          charity bike rides.  </p>
       </div>
   </section>
 
   <section class="solution">
     <div class="container">
       <h2> Solution Overview</h2>
-      <h1> Trust and Transparency </h1>
-      <p> Ridestarter seeks to centralize charity bike rides across the world and allow users to crowd-sourced
-        for ride projects in one location. The goal for Ridestarter is to allow donors and fundraisers to come
+      <h1> A Trusted Crowdfunding Medium </h1>
+      <p> Ridestarter seeks to consolidate charity bike rides and allow users to crowd-sourced
+        for ride projects in one central location. The goal for Ridestarter is to allow donors and fundraisers to come
         together in supporting charity rides for causes they care about. Donors can browse and donate to a specific
-        cause of their choosing while fundraisers can effortlessly create bike campaigns through an intuitive flow.   </p>
+        cause of their choosing while fundraisers can effortlessly build bike projects through an intuitive creation flow.   </p>
 
         <div class="middle">
           <h3> See Interactive Prototype</h3>
@@ -162,7 +163,7 @@
   <section class="Information">
     <div class="container">
       <h2> Information Architecture Phase</h2>
-      <h1> Ensuring a Streamlined Ecommerce Flow </h1>
+      <h1> Distilling the Flow Process</h1>
       <p> Before touching on the wireframes, I wanted to ensure the clarity of Ridestarter's goals and structures.
         To do that, I created a detailed sitemap from the start of the landing page to the different
         elements of a crowdfunding site. </p>
@@ -195,7 +196,7 @@
     </div>
   </section>
 
-  <section class="brand">
+  <section class="shadowbrand brand">
     <div class="container">
       <h2> Visual Identity Phase </h2>
       <h1> Cycling through the Brand Identity </h1>
