--- a/simplebox2.html
+++ b/simplebox2.html
@@ -40,7 +40,7 @@
 
     <div class="hero_content">
         <h1> Simplebox </h1>
-        <a href="https://invis.io/Z2D6DKKTY" target="_blank"><button class="btn">SEE PROTOTYPE</button></a>
+        <a href="https://invis.io/DQHAF77FNSM" target="_blank"><button class="btn">SEE PROTOTYPE</button></a>
         <div class="arrow_down_container bounce">
           <i class="fa fa-arrow-down fa-2x" style="color:white"></i>
         </div>
