--- a/about.html
+++ b/about.html
@@ -83,6 +83,6 @@
         <a href="mailto:ekkalux_414@berkeley.edu"><i class="fa fa-envelope fa-lg"></i></a>
         <a href="https://github.com/ekkalux"><i class=" fa fa-github fa-lg"></i></a>
     </div>
-    <p>Designed and Developed by Ekkalux Nguyen</p>
+    <p>Designed and developed with love by Ekkalux Nguyen</p>
   </div>
 </section>
