--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="css/hover-min.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
-  <script src="js/scrolldown.js"></script>
+  <script src="js/equipax.js"></script>
 
   <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet">
 
