--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
         excites me the most about user experience design is that it gives designer the opportunity
         to exercise their creative thinking to address everyday problems. As a junior designer, I am always
         looking for new approaches to enhance my process and craftsmanship. </p>
-      <p> When I'm not designing, you can find me working out, hiking, going to concerts, and
+      <p> When I'm not designing, you can find me staying on top of my fitness, hiking, going to concerts, and
         having great conversations at a local coffee shop. <a href="mailto:ekkalux_414@berkeley.edu">Drop me a line </a> and let's create
         something awesome together! </p>
     </div>
